<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp"
        android:weightSum="1">

        <EditText
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/editText2"
            android:layout_weight="0.01"
            android:maxLength="10"
            />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp"
        android:weightSum="1"
       >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/editText_from1"
            android:maxLength="10"
            android:text="KZT" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="в"
            android:id="@+id/toSign" />
        <Button
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:id="@+id/to_1"
            android:text="USA" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="="
            android:id="@+id/equals" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result" />
        </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp"
        android:weightSum="1">
        <EditText
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/editText_from2"
            android:maxLength="10"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="в"
            android:id="@+id/toSign_2" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/editText_to"
            android:maxLength="10"
            android:text="KZT" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="="
            android:id="@+id/equals_2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_2" />
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"

        android:paddingTop="20dp"
        >

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/one"
            android:text="@string/one" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/two"
            android:text="@string/two" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/three"
            android:text="@string/three" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp">

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/four"
            android:text="@string/four" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/five"
            android:text="@string/five" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/six"
            android:text="@string/six" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp">

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/seven"
            android:text="@string/seven" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/eight"
            android:text="@string/eight" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/nine"
            android:text="@string/nine" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp">
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/clear"
            android:text="del" />
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/zero"
        android:text="@string/zero" />
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/dot"
        android:text="@string/dot" />
        </LinearLayout>
    <NumberPicker
        android:id="@+id/dpResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
</LinearLayout>